# tpm2-app

./: HashSequenceScheduler.cpp  HashSequenceScheduler.h  HashSequenceScheduler_test.cpp  main.cpp
algorithms/SHA1/: SHA1.c  SHA1.h  example.cpp  makefile
algorithms/SM3_256/: SM3.cpp  SM3.h  example.c
appmain/: ApplicationBasedOnTSSSystemAPI.cpp  ApplicationBasedOnTSSSystemAPI.h  Base64Converter.cpp  Base64Converter.h  CalculatorClient.cpp  CalculatorClient.h  Client.cpp  Client.h  ConnectionManager.cpp  ConnectionManager.h  ContextFileFormatter.cpp  ContextFileFormatter.h  ContextFileParser.cpp  ContextFileParser.h  DBusConnectionManager.cpp  DBusConnectionManager.h  Makefile  SequenceScheduler.cpp  SequenceScheduler.h  SocketConnectionManager.cpp  SocketConnectionManager.h  TPMCommand.h  TSSContextInitializer.cpp  TSSContextInitializer.h  TestCase.cpp  TestCase.h  TextFileReader.cpp  TextFileReader.h  main.cpp
appmain/AESCalculatorClientTest/: main.cpp
appmain/HMACTest/: README.md  main.cpp
appmain/HashCalculatorClientTest/: main.cpp  prepare_test_data.py  sha1sum.cpp  sha256sum.cpp  test.sh
appmain/ObjectContextSavingAndLoadingTest/: main.cpp
appmain/libplugin/: ContextLoad.cpp  ContextSave.cpp  Create.cpp  CreatePrimary.cpp  DumpRawFile.cpp  DumpRawFile.h  Flush.cpp  HMAC.cpp  Hash.cpp  Load.cpp  LoadExternal.cpp  Makefile  NV_DefineSpace.cpp  NV_Read.cpp  NV_ReadPublic.cpp  (+10 more)
appmain/libtctiprobe/: Makefile  config.mk.in  configure.ac  probe.h  tcti-detector-test.mk  tcti-detector.c  tcti-detector.h  tcti-detector.mk
appmain/libtctiprobe/test/: connection-manager.h  tcti-detector-test.cpp
docs/: Makefile  Part3函数列表.xlsx  README.md  TSS函数接口说明文档.docx  doxygen.conf  undocumented_types.h
hardware/: README.md  README.txt
utils/: KeyGenerator_test.cpp  KeyUtilities.cpp  KeyUtilities.h
(+19 files in other folders)
